fix if static dir not found