@@ -4,9 +4,10 @@ import fr.uparis.pandaparser.config.Config;
 import fr.uparis.pandaparser.utils.FilesUtils;
 import lombok.extern.java.Log;
 
+import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Set;
 
 @Log
@@ -14,7 +15,7 @@ public class StaticFile {
 
     /**
      * @param input directory source path
-     * Get all static filenames in the directory
+     *              Get all static filenames in the directory
      * @return set Of static filenames
      */
     private static Set<String> getAllStaticFiles(String input) throws IOException {
@@ -22,23 +23,28 @@ public class StaticFile {
     }
 
     /**
-     * @param input directory source path
+     * @param input  directory source path
      * @param output directory destination path
-     * Copy all the static files from input directory to output directory
+     *               Copy all the static files from input directory to output directory
      */
     public static void setAllStaticFiles(String input, String output) throws IOException {
+
         String inputDirectoryPath = input + Config.DEFAULT_STATIC_DIR;
         String outputDirectoryPath = output + Config.DEFAULT_STATIC_DIR;
-        Set<String> staticFiles = getAllStaticFiles(inputDirectoryPath);
-        Files.createDirectories(Paths.get(outputDirectoryPath));
-        staticFiles.forEach((file) -> {
-            try {
-                FilesUtils.copyFileFromInputToOutput( inputDirectoryPath + file.substring(file.lastIndexOf("/")),outputDirectoryPath + file.substring(file.lastIndexOf("/")));
-            } catch (IOException e) {
-                e.printStackTrace();
-            }
-        });
-        log.info("static : Successful transfer static files from " + inputDirectoryPath
-                + " to " + outputDirectoryPath);
+
+        if (Files.exists(Path.of(inputDirectoryPath))) {
+            Set<String> staticFiles = getAllStaticFiles(inputDirectoryPath);
+            FilesUtils.createDirectoryIfNotExiste(outputDirectoryPath);
+
+            staticFiles.forEach((file) -> {
+                try {
+                    String filename = FilesUtils.getFileName(file);
+                    FilesUtils.copyFileFromInputToOutput(inputDirectoryPath + filename, outputDirectoryPath + filename);
+                } catch (IOException e) {
+                    e.printStackTrace();
+                }
+            });
+            log.info("static : Successful transfer static files from " + inputDirectoryPath + " to " + outputDirectoryPath);
+        }
     }
 }
